gcc/testsuite/rust/rustc/ui/mir/issue-92893.rs
struct Bug<A = [(); (let a = (), 1).1]> {
// { dg-error "" "" { target *-*-* } .-1 }
    a: A
}

fn main() {}

